[workspace]
resolver = "2"
members = [
  "contracts/*", # Include all smart contracts in the workspace
]

[workspace.dependencies]
# Shared dependency version across all contracts
soroban-sdk = "25"

# Optimized release build for Soroban contracts
[profile.release]
opt-level = "z"          # Minimize binary size
overflow-checks = true   # Keep arithmetic safety checks
debug = 0
strip = "symbols"        # Remove debug symbols
debug-assertions = false
panic = "abort"          # Smaller WASM output
codegen-units = 1
lto = true               # Enable Link Time Optimization

# Useful while debugging contract logs locally
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
